# Intersection-Traffic-Simulation

./: .gitignore  Algorithm.cpp  Algorithm.h  Button.cpp  Button.h  CMakeLists.txt  README.md  Results.h  SettingsPanel.cpp  SettingsPanel.h  Simulation.cpp  Simulation.h  SpawnOption.cpp  SpawnOption.h  StatisticsPanel.cpp  StatisticsPanel.h  main.cpp  results.cpp  vehicle.cpp  vehicle.h  vehicle.ui  vehicles.qrc
